# pipeforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN_v3.md  DESIGN_v5.md  DESIGN_v7.md  DETAILED_DESIGN_v2.md  Dockerfile  FIX_REPORT_v0.2.1.md  FIX_VERIFICATION_REPORT_20260513.md  FULL_PROJECT_SCAN.md  Makefile  PROJECT_REVIEW.md  PROJECT_REVIEW_v2.md  PROJECT_STATUS_REPORT.md  PROJECT_STATUS_REPORT_20260513.md  README.md  REVIEW.md  REVIEW_v2.md  REVIEW_v4.md  REVIEW_v6.md  SYSTEM_REVIEW_v0.2.1.md  UI UX_REVIEW.md  UI_UX_DETAILED_OPTIMIZATION_REPORT.md  UI_UX_OPTIMIZATION_REPORT.md  VERIFICATION_REPORT_v0.2.1.md  architecture-review-2026-06-27.md  architecture-review-final-2026-06-28.md  architecture-review-followup-2026-06-27.md  cmp.mjs  docker-compose.yml  package-lock.json  package.json  pyproject.toml  system-review-2026-06-28.md  tmp-compare.mjs  tmp_ui_test.py
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/: DESIGN.md  DESIGN_v2.md  DESIGN_v4.md  DESIGN_v6.md  DETAILED_DESIGN.md  REVIEW_v3.md  REVIEW_v5.md
configforge/: requirements.txt  scheduler.py  server.py
configforge-web/: CHANGELOG_20260519.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
configforge-web/e2e/: fixtures.ts  full-wizard.script.ts  full-wizard.spec.ts  home.spec.ts  login.spec.ts  templates.spec.ts  test_autoopen.spec.ts  test_pulse.spec.ts  wizard.spec.ts
configforge-web/scripts/: gen_icons.py
configforge-web/src/: App.vue  env.d.ts  main.ts  style.css
configforge-web/test-results/: .last-run.json
configforge-web/tests/: setup.ts  ux_test.mjs
configforge/api/: ai.py  auth.py  backup.py  configs.py  connections.py  executions.py  files.py  notifications.py  plugins.py  preview.py  schedules.py  storage.py  templates.py  wizard.py
configforge/core/: pipeline.py  registry.py
configforge/generators/: __init__.py  base.py
configforge/middleware/: auth.py  jwt.py
configforge/models/: __init__.py  ai.py  notification.py  template.py  user.py  wizard.py
configforge/services/: api_reader.py  audit_logger.py  config_service.py  config_store.py  connection_store.py  csv_reader.py  excel_reader.py  execution_service.py  execution_store.py  json_reader.py  parquet_reader.py  reader_dispatch.py  (+5 more)
demo/: CONFIGFORGE_DEMO_REVIEW.md  CONFIGFORGE_DEMO_REVIEW_v2.md  configforge-demo.html  pipeline.yaml  test.xlsx  人员明细.xlsx  考勤数据.xlsx
deploy/: nginx.conf.example
docs/: AI_SELFHEAL_OPTIMIZATION_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  NEXT_DIRECTION_v0.6.md  NEXT_STEPS.md  PHASE4_IMPLEMENTATION_PLAN.md  PLAN_REVIEW_AUDIT.md  PLUGIN_OPTIMIZATION_PROPOSAL.md  PLUGIN_PROPOSAL_REVIEW.md  PLUGIN_PROPOSAL_REVIEW_V2.md  PROJECT_OPTIMIZATION_PLAN.md  PROJECT_OPTIMIZATION_RECOMMENDATIONS.md  PROJECT_STATUS_ANALYSIS.md  PROJECT_STATUS_AND_ROADMAP.md  SYSTEM_STATUS_v1.0.0.md  optimization-plan.md  v0.3.2-stabilization-report.md
nginx/: nginx.conf
tests/: conftest.py  test_checkpoints.py  test_cli.py  test_config_loader.py  test_config_models.py  test_context.py  test_csv_input.py  test_csv_output.py  test_database_input.py  test_database_output.py  test_engine.py  test_engine_multiproc.py  test_excel_input.py  test_excel_output.py  test_integration.py  test_json_input.py  test_logging.py  test_parquet_input.py  test_plugin_autoload.py  test_plugins_base.py  test_python_processor.py  test_registry.py  test_sql_processor.py  test_sqlite.py  test_xml_input.py
(+533 files in other folders)
