[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeforge"
version = "0.1.0"
description = "CLI data pipeline framework — YAML config + SQLite + openpyxl"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "click>=8.0",
    "jinja2>=3.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
pipeforge = "pipeforge.cli:main"

[project.optional-dependencies]
ai = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
