[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeforge"
version = "0.1.0"
description = "CLI data pipeline framework — YAML config + SQLite + openpyxl"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "click>=8.0",
    "jinja2>=3.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "cryptography>=42.0",
    "httpx>=0.24.0",
    "openai>=1.0",
    "anthropic>=0.30",
]

[project.scripts]
pipeforge = "pipeforge.cli:main"

[project.optional-dependencies]
ai = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an async test",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pipeforge*", "configforge*"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
