[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeforge"
version = "0.8.1"
description = "CLI data pipeline framework — YAML config + SQLite + openpyxl"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "click>=8.0",
    "jinja2>=3.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "httpx>=0.24.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "deepdiff>=5.0",
    "apscheduler>=3.10",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=24.0.0",
    "sse-starlette>=2.0.0",
    "prometheus_client>=0.20.0",
]

[project.scripts]
pipeforge = "pipeforge.cli:main"

[project.optional-dependencies]
ai = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an async test",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904", "B027", "SIM108", "E402", "B017"]  # E402: circular import avoidance; B008: FastAPI Depends; B904: raise from; B017: blind exception in tests

[tool.ruff.format]
quote-style = "double"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pipeforge*", "configforge*"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
